<resources>
    <string name="app_name">Ra3y</string>
    <string name="email">Email</string>
    <string name="title_activity_register">register</string>
    <!-- Strings used for fragments for navigation -->

    <string name="request">Request</string>
    <string name="vaccination">vaccination</string>
    <string name="services">services</string>
    <string name="please_input_the_following_prompts">Please provide the following details:</string>
    <string name="any_additional_information_about_the_pet">Any additional information about the pet</string>
    <string name="search">Search</string>
    <string name="starting_date">Starting Date</string>
    <string name="ending_date">Ending Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="pick_starting_date">Pick the starting date!</string>
    <string name="pick_ending_date">Pick Ending Date!</string>
    <string name="location">Location</string>
    <string name="duration">Duration:</string>

    <!-- Strings used for fragments for navigation -->


    <!--    <string name="services">Services</string>-->
    <!--    <string name="services">services</string>-->

    <string name="vaccinations">Vaccinations</string>
    <string name="canine_distemper_virus">Canine Distemper Virus</string>
    <string name="canine_parvovirus">Canine Parvovirus</string>
    <string name="canine_adenovirus_2_hepatitis">Canine Adenovirus-2 (Hepatitis)</string>
    <string name="rabies_virus">Rabies Virus</string>
    <string name="submit">Submit</string>
    <string name="last_name">Last Name</string>
    <!--    <string name="email">Email</string>-->
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <!--    <string name="submit">Submit</string>-->
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="pet_name">Pet Name</string>
    <string name="todo">TODO</string>
    <string-array name="sittersNames">
        <item>Mohamed Ashraf</item>
        <item>Salma Elsayed</item>
        <item>Omar El-Mahdy</item>
        <item>Omar Elewa</item>
    </string-array>

    <string-array name="sittersLocations">
        <item>Cairo, Fifth Settlement </item>
        <item>Cairo, Maadi</item>
        <item>Cairo, Downtown</item>
        <item>Cairo, Masr El-gedida</item>
    </string-array>

    <string-array name="pricePerHour">
        <item> 150L.E/hr</item>
        <item> 200L.E/hr</item>
        <item> Free</item>
        <item> 120L.E/hr</item>
    </string-array>
    <string-array name="pet_list">
        <item> Dog: Gucci</item>
        <item> Cat: Rosie </item>
        <item> Hamster: Oscar </item>
        <item> Turtle: Lio </item>

    </string-array>
    <array name="pic_list">
        <item>@drawable/boxer</item>
        <item>@drawable/cat</item>
        <item>@drawable/hamster</item>
        <item>@drawable/turtle</item>
    </array>
    <string name="title_activity_loading">loading</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    Places.initialize(getApplicationContext(),AIzaSyCUpI9Vfo-moJWeMfWH5rKD8VG1Z54AU8g);

</resources>