<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        style="@style/prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Options" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3C5B9B"
            android:text="@string/request"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/vaccination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3C5B9B"
            android:text="@string/vaccination"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3C5B9B"
            android:text="@string/services"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>