<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-56dp">

<<<<<<< HEAD
    <LinearLayout
=======
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="313dp"
        android:layout_height="183dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:src="@drawable/ra3yyy"
        app:layout_constraintBottom_toTopOf="@+id/FirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="317dp"
        android:layout_height="30dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="8dp"
        android:background="#F5F5F5"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint=" #949494"
        app:layout_constraintBottom_toTopOf="@+id/confirmpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phonenumber" />

    <EditText
        android:id="@+id/LastName"
        android:layout_width="317dp"
        android:layout_height="30dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="#F5F5F5"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint=" #949494"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstName" />

    <EditText
        android:id="@+id/email"
        android:layout_width="317dp"
        android:layout_height="30dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="8dp"
        android:background="#F5F5F5"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint=" #949494"
        app:layout_constraintBottom_toTopOf="@+id/phonenumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LastName" />

    <EditText
        android:id="@+id/phonenumber"
        android:layout_width="317dp"
        android:layout_height="30dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="8dp"
        android:background="#F5F5F5"
        android:ems="10"
        android:hint="Phone Number"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint=" #949494"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512" />

    <EditText
        android:id="@+id/confirmpass"
        android:layout_width="317dp"
        android:layout_height="30dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"

        android:layout_marginRight="36dp"
        android:layout_marginBottom="8dp"
        android:background="#F5F5F5"
        android:ems="10"
        android:hint="Confirm Password"


        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint=" #949494"
        app:layout_constraintBottom_toTopOf="@+id/submitReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <EditText
        android:id="@+id/FirstName"
        android:layout_width="317dp"
        android:layout_height="30dp"
        android:layout_marginStart="58dp"
        android:textColor="@color/black"

        android:layout_marginLeft="58dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="#F5F5F5"
        android:ems="10"
        android:hint="First Name"
        android:textColorHint=" #949494"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/LastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/submitReg"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="204dp"

        android:text="Submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpass" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:layout_marginBottom="35dp"
        android:src="@drawable/dogs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitReg" />


    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
>>>>>>> ad924db1dcbb072bf8689c32df664fe4e8f190f5
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ra3yyy" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:autofillHints="First Name"
                android:ems="7"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:ems="7"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:minHeight="48dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            android:hint="@string/phone_number"
            android:inputType="phone"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextNumberPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Confirm Password"

            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/button6"
            style="@style/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/submit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>